<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">MAGI Home</string>
    <string name="folder_name">Folder</string>
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpaper gallery</string>
    <string name="activity_not_found">Application is not installed on your phone.</string>
    <string name="configure_wallpaper">Configure...</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Applications</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="launcher_actions">Home Actions</string>
    <string name="group_search">Search</string>
    <string name="group_folder">New folder</string>
    <string name="group_live_folders">Folders</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Select shortcut</string>
    <string name="title_select_live_folder">Select folder</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Remove</string>
    <string name="menu_uninstall">Uninstall</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_adw_settings">ADWSettings</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an application to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows an application to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an application to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an application to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="adw_version">1.3.6 Standalone</string>
    <string name="pref_label_settings">ADW Settings</string>
    <string name="pref_title_screen_preferences">Screen preferences</string>
    <string name="pref_summary_screen_preferences">Default screen, layout...</string>
    <string name="pref_title_wallpaper_hack">Wallpaper Hack</string>
    <string name="pref_summary_wallpaper_hack">Disable this if you get FCs. Leaving it enabled improves the scrolling speed.</string>
    <string name="pref_title_orientation_sensor">Home Orientation</string>
    <string name="pref_summary_orientation_sensor">Select your desired orientation</string>
    <string name="pref_title_hide_statusbar">Hide StatusBar</string>
    <string name="pref_summary_hide_statusbar">Hides your statusbar</string>
    <string name="pref_title_default_screen">Default Screen</string>
    <string name="pref_title_desktop_scrolling_speed">Desktop scrolling speed</string>
    <string name="pref_summary_desktop_scrolling_speed">Set the speed used to fling desktops screens</string>
    <string name="pref_dialog_desktop_scrolling_speed">The lower the value, the faster you will fling</string>
    <string name="pref_title_desktop_overshoot">Desktop overshoot</string>
    <string name="pref_summary_desktop_overshoot">Allows bouncy scrolling desktop screens</string>
    <string name="pref_dialog_desktop_overshoot">Set it to 0 to disable overshooting</string>
    <string name="pref_title_drawer_settings">Drawer Settings</string>
    <string name="pref_summary_drawer_settings">App drawer grid preferences</string>
    <string name="pref_title_zoom_effect_speed">Zoom effect speed</string>
    <string name="pref_summary_zoom_effect_speed">Set the time in milliseconds for the zoom effect</string>
    <string name="pref_dialog_zoom_effect_speed">Set the time in milliseconds for the zoom effect</string>
    <string name="pref_title_page_horizontal_margin">Page Horizontal Margin</string>
    <string name="pref_summary_page_horizontal_margin">Set the horizontal margin between each pages of Drawer</string>
    <string name="pref_dialog_page_horizontal_margin">Set the horizontal margin between each pages of Drawer</string>
    <string name="pref_title_animated_drawer">Animated Drawer</string>
    <string name="pref_summary_animated_drawer">Turns whether App Drawer should display animations</string>
    <string name="pref_title_drawer_columns_portrait">Drawer Columns Portrait</string>
    <string name="pref_summary_drawer_columns_portrait">Select the number of drawer columns to use on portrait layout</string>
    <string name="pref_dialog_drawer_columns_portrait">Select the number of drawer columns to use on portrait layout</string>
    <string name="pref_title_drawer_rows_portrait">Drawer Rows Portrait</string>
    <string name="pref_summary_drawer_rows_portrait">Select the number of drawer rows to use on portrait layout</string>
    <string name="pref_dialog_drawer_rows_portrait">Select the number of drawer rows to use on portrait layout</string>
    <string name="pref_title_drawer_columns_landscape">Drawer Columns Landscape</string>
    <string name="pref_summary_drawer_columns_landscape">Select the number of drawer columns to use on landscape layout</string>
    <string name="pref_dialog_drawer_columns_landscape">Select the number of drawer columns to use on landscape layout</string>
    <string name="pref_title_drawer_rows_landscape">Drawer Rows Landscape</string>
    <string name="pref_summary_drawer_rows_landscape">Select the number of drawer rows to use on landscape layout</string>
    <string name="pref_dialog_drawer_rows_landscape">Select the number of drawer rows to use on landscape layout</string>
    <string name="pref_title_sense_previews">Sense previews</string>
    <string name="pref_summary_sense_previews">Use the new sense-like implementation</string>
    <string name="pref_title_ui_settings">UI Settings</string>
    <string name="pref_summary_ui_settings">Enable/disable ui elements</string>
    <string name="pref_title_home_button_binding">Home button binding</string>
    <string name="pref_summary_home_button_binding">Select action for home button binding</string>
    <string name="pref_title_swipedown_actions">Swipe down actions</string>
    <string name="pref_summary_swipedown_actions">Select action for Swipe down gesture</string>
    <string name="pref_title_swipeup_actions">Swipe up actions</string>
    <string name="pref_summary_swipeup_actions">Select action for Swipe up gesture</string>
    <string name="pref_title_desktop_dots">Desktop dots</string>
    <string name="pref_summary_desktop_dots">Show/hide the nexus style pagination dots</string>
    <string name="pref_title_dockbar">Dockbar</string>
    <string name="pref_summary_dockbar">Enable/disable the new dockbar for your shortcuts</string>
    <string name="pref_title_closing_dockbar">Closing dockbar</string>
    <string name="pref_summary_closing_dockbar">Auto-close dockbar after app-launch</string>
    <string name="pref_title_closing_folder">Closing folder</string>
    <string name="pref_summary_closing_folder">Auto-close folder after app-launch</string>
    <string name="pref_title_ab_scale_factor">AB size</string>
    <string name="pref_summary_ab_scale_factor">Set the scaling size for the ActionButton icons</string>
    <string name="pref_dialog_ab_scale_factor">Set the scaling size for the ActionButton icons</string>
    <string name="pref_title_hide_ab_bg">Hide AB Bg</string>
    <string name="pref_summary_hide_ab_bg">Hide the background for the Action Buttons</string>
    <string name="pref_title_hide_icon_labels">Hide icon labels</string>
    <string name="pref_summary_hide_icon_labels">Hide desktop icon labels</string>
    <string name="pref_title_build_info">Build Information</string>
    <string name="pref_title_adw_version">ADW Version</string>
    <string name="pref_title_icon_highlights">Highlights press color</string>
    <string name="pref_summary_icon_highlights">Set the color for icon press</string>
    <string name="pref_title_icon_highlights_focus">Highlights focus color</string>
    <string name="pref_summary_icon_highlights_focus">Set the color for icon focus</string>
    <string name="pref_title_new_selectors">Use new icon selectors</string>
    <string name="pref_summary_new_selectors">Disable this to use the old drawables.</string>
    <string name="pref_title_drawer_color">Background color</string>
    <string name="pref_summary_drawer_color">Set the color for the drawer background</string>
    <string name="pref_dialog_title_color_picker">Pick a color.</string>
    <string name="pref_dialog_message_color_picker">"Tap on center color to confirm.\nPress back to cancel."</string>
    <string name="pref_dialog_color_picker_alpha">alpha</string>
    <string name="pref_message_restart_normal">Changing this setting will make the Launcher restart itself</string>
    <string name="pref_message_restart_froyo">Changing this setting will make the Launcher restart itself</string>
    <string name="drop_to_uninstall">Drop to Uninstall</string>
    <string name="toast_widgets_not_supported">Widgets not supported.</string>
    <string name="toast_unknown_item">"Unknown item. We can\'t add unknown item types."</string>
    <string name="toast_no_application_def">No application defined yet, drop something here.</string>
    <string name="pref_title_import_export">Backup and restore</string>
    <string name="pref_title_xml">ADW settings</string>
    <string name="pref_title_xml_import">Restore ADW settings</string>
    <string name="pref_summary_xml_import">Restore from /sdcard/adw_settings.xml</string>
    <string name="pref_title_xml_export">Backup ADW settings</string>
    <string name="pref_summary_xml_export">Backup to /sdcard/adw_settings.xml</string>
    <string name="pref_title_db">Desktop configuration</string>
    <string name="pref_title_db_import">Restore desktop configuration</string>
    <string name="pref_summary_db_import">Restore from /sdcard/adw_launcher.db</string>
    <string name="pref_title_db_export">Backup desktop configuration</string>
    <string name="pref_summary_db_export">Backup to /sdcard/adw_launcher.db</string>
    <string name="title_dialog_xml">ADW Launcher Settings</string>
    <string name="import_export_sdcard_unmounted">SD card not mounted!</string>
    <string name="message_dialog_export">Backup ADW settings? Any existing file will be overwritten.</string>
    <string name="xml_export_dialog">Backing up ADW settings...</string>
    <string name="xml_export_success">ADW settings backed up successfully!</string>
    <string name="dock_browser">Browser</string>
    <string name="dock_phone">Phone</string>
    <string name="dock_open_close">Open/close App Drawer</string>
    <string name="dock_sp_mail">SPモードメール</string>
    <string name="dock_preview">Show screen list</string>
</resources>